<resources>
    <string name="app_name">LOGIN APPLICATION</string>
    <string name="username">Enter Your Username</string>
    <string name="password">Enter your password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="savetitle">Save Your Info</string>
    <string name="fname">Enter Firstname</string>
    <string name="lname">Enter Lastname</string>
    <string name="address">Enter Address</string>
    <string name="phone">Enter phone number</string>
    <string name="save_information">Save</string>
</resources>