<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".MainActivity3">
    <TextView
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAllCaps="true"
        android:padding="30dp"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/savetitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fname"
        android:padding="15dp"
        android:inputType="text"
        android:textSize="25dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lname"
        android:padding="15dp"
        android:inputType="text"
        android:textSize="25dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:padding="15dp"
        android:inputType="text"
        android:textSize="25dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sex"
            android:textSize="25dp"
            android:textColor="@color/purple_200"
            android:padding="10dp"/>
        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:padding="10dp"></RadioButton>
        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:padding="20dp"></RadioButton>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:padding="15dp"
        android:inputType="phone"
        android:textSize="25dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_information"
        android:padding="10dp"
        android:textSize="35dp"
        android:background="@color/purple_200"
        android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to galley"
            android:onClick="galley"
            android:textSize="35dp"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:onClick="logout"
            android:textSize="35dp"/>
    </RelativeLayout>
</LinearLayout>